test: expand test suite and raise coverage